﻿-- 0.69 --
* Fixed a crash when using slow sources disconnect
* Fixed system log overflow
* Minor user command fix (thanks garg)
* Removed some duplicate code (thanks trem)
* Ctrl-a to select all items in a list (thanks garg)
* Added a check for multiple refreshes running at the same time (thanks trem)
* Fixed a few crashes here and there
* Fixed no-slots message not being sent out always


-- 0.68 2006-01-08 --
* Changed the user identification process completely to work better with ADC. This leads to a more strict interpretation of
  which users are actually the same for NMDC (essentially, NMDC users are now identified by nick+hub always, not only nick)
* Removed saving of directories scheduled for download, since the individual files should appear in the queue fast enough that
  this will rarely be used (since file lists are free and downloaded almost instantly)
* Fixed international timestamps (thanks ullner)
* Fixed targetdrive docs (thanks ullner)
* [bug 485] Fixed transfer list view flicker on WinXP
* New connection settings, please check settings page
* Connection type strings changed
* No longer falls back to passive mode on failed UPnP
* Janitorial cleanups (thanks garg)
* Removed some old favorite file format compatibility code
* Added country to search frame (thanks paka)
* Strftime fix (thanks garg)
* [bug 521] Help instead of readme shown on first startup (thanks paka)
* [bug 553] Minimize to tray and confirm appexit default to true (thanks paka)
* [bug 452] Fixed example.xml language file generation (thanks tpo)
* [bug 556] Fixed last searches purge (thanks sulan)
* [bug 73] Added option to disconnect slow sources (thanks paka)
* ADC hub counts updated correctly (thanks ullner)
* [bug 325] Added error message when adding dupe fav hub (thanks ullner)
* Updated bzip2 to 1.0.3 (thanks garg)
* Some small *nix fixes (thanks poison)
* Source path no longer saved for TTH enabled clients (saves memory and queue file space)