@@ -190,7 +190,8 @@ public:
 		FLAG_UPLOAD = FLAG_OP << 1,
 		FLAG_DOWNLOAD = FLAG_UPLOAD << 1,
 		FLAG_INCOMING = FLAG_DOWNLOAD << 1,
-		FLAG_HASSLOT = FLAG_INCOMING << 1,
+		FLAG_ASSOCIATED = FLAG_INCOMING << 1,
+		FLAG_HASSLOT = FLAG_ASSOCIATED << 1,
 		FLAG_HASEXTRASLOT = FLAG_HASSLOT << 1,
 		FLAG_INVALIDKEY = FLAG_HASEXTRASLOT << 1,
 		FLAG_SUPPORTS_GETZBLOCK = FLAG_INVALIDKEY << 1,
@@ -365,5 +366,5 @@ private:
 
 /**
  * @file
- * $Id: UserConnection.h,v 1.101 2006/01/15 18:40:38 arnetheduck Exp $
+ * $Id: UserConnection.h,v 1.102 2006/01/19 20:50:27 arnetheduck Exp $
  */
