@@ -14,8 +14,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)vc7\taocrypt\Debug"
-			IntermediateDirectory="$(SolutionDir)vc7\taocrypt\Debug"
+			OutputDirectory="$(SolutionDir)vc7\Debug\taocrypt"
+			IntermediateDirectory="$(SolutionDir)vc7\Debug\taocrypt"
 			ConfigurationType="4"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE"
@@ -62,8 +62,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)vc7\taocrypt\Release"
-			IntermediateDirectory="$(SolutionDir)vc7\taocrypt\Release"
+			OutputDirectory="$(SolutionDir)vc7\Release\taocrypt"
+			IntermediateDirectory="$(SolutionDir)vc7\Release\taocrypt"
 			ConfigurationType="4"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE"
