@@ -13,8 +13,8 @@
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
-			OutputDirectory="$(SolutionDir)\vc7\yassl\Debug"
-			IntermediateDirectory="$(SolutionDir)\vc7\yassl\Debug"
+			OutputDirectory="$(SolutionDir)vc7\Debug\yassl"
+			IntermediateDirectory="$(SolutionDir)vc7\Debug\yassl"
 			ConfigurationType="4"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE"
@@ -61,8 +61,8 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)\vc7\yassl\Release"
-			IntermediateDirectory="$(SolutionDir)\vc7\yassl\Release"
+			OutputDirectory="$(SolutionDir)vc7\Release\yassl"
+			IntermediateDirectory="$(SolutionDir)\vc7\Release\yassl"
 			ConfigurationType="4"
 			UseOfMFC="0"
 			ATLMinimizesCRunTimeLibraryUsage="FALSE"
