@@ -7,6 +7,8 @@
 * Added a check for multiple refreshes running at the same time (thanks trem)
 * Fixed a few crashes here and there
 * Fixed no-slots message not being sent out always
+* Fixed yassl build locations (thanks pothead)
+* Added ip resolve cache when searching (thanks trem)
 
 
 -- 0.68 2006-01-08 --
